@@ -1,7 +1,6 @@
 package heap;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.TreeMap;
 
@@ -51,33 +50,36 @@ import java.util.TreeMap;
 public class TheSkylineProblem {
 
     public List<List<Integer>> getSkyline(int[][] buildings) {
-        List<List<Integer>> list = new ArrayList<>();
-        List<int[]> lines = new ArrayList<>();
+        List<int[]> events = new ArrayList<>();
         for (int[] building : buildings) {
-            lines.add(new int[]{building[0], building[2]});
-            lines.add(new int[]{building[1], -building[2]});
+            events.add(new int[]{building[0], building[2]});
+            events.add(new int[]{building[1], -building[2]});
         }
-        lines.sort((a, b) -> a[0] == b[0] ? b[1] - a[1] : a[0] - b[0]);
-        TreeMap<Integer, Integer> map = new TreeMap<>();
-        map.put(0, 1);
-        int prev = 0;
-        for (int[] line : lines) {
-            if (line[1] > 0) {
-                map.put(line[1], map.getOrDefault(line[1], 0) + 1);
+        events.sort((a, b) -> a[0] == b[0] ? b[1] - a[1] : a[0] - b[0]);
+
+        List<List<Integer>> skyline = new ArrayList<>();
+        TreeMap<Integer, Integer> heightMap = new TreeMap<>();
+        heightMap.put(0, 1);
+        int prevHeight = 0;
+
+        for (int[] event : events) {
+            if (event[1] > 0) {
+                heightMap.put(event[1], heightMap.getOrDefault(event[1], 0) + 1);
             } else {
-                int f = map.get(-line[1]);
-                if (f == 1) {
-                    map.remove(-line[1]);
+                int count = heightMap.get(-event[1]);
+                if (count == 1) {
+                    heightMap.remove(-event[1]);
                 } else {
-                    map.put(-line[1], f - 1);
+                    heightMap.put(-event[1], count - 1);
                 }
             }
-            int curr = map.lastKey();
-            if (curr != prev) {
-                list.add(Arrays.asList(line[0], curr));
-                prev = curr;
+
+            int currentHeight = heightMap.lastKey();
+            if (currentHeight != prevHeight) {
+                skyline.add(List.of(event[0], currentHeight));
+                prevHeight = currentHeight;
             }
         }
-        return list;
+        return skyline;
     }
 }
